--- a/www/css/style.css
+++ b/www/css/style.css
@@ -148,13 +148,7 @@ h6 {
   /*text-align: center;     
   height: 100%;*/  
   /*width: 100%; */
-  position: absolute;
-
-      width: 100%;
-
-      /*height: 100%;*/
-
-      background-size: cover;
+width:100%;height:100%;position:absolute;top:0;left:0;z-index:-5000;
 
       background-color: purple;
 }
